# Portefolio-Project

./: README.md  index.html
Projects/CyberGuard/: README.md  requirements.txt
Projects/CyberGuard/demo/: index.html
Projects/CyberGuard/frontend/: package.json
Projects/CyberGuard/frontend/src/: App.css  App.js
Projects/CyberGuard/frontend/src/components/: Navbar.css  Navbar.js  ProtectedRoute.js  Sidebar.css  Sidebar.js
Projects/CyberGuard/frontend/src/pages/: Dashboard.css  Dashboard.js  Devices.css  Devices.js  Login.css  Login.js  Settings.css  Settings.js  Threats.css  Threats.js
Projects/CyberGuard/src/: main.py
Projects/CyberGuard/src/api/: routes.py
Projects/CyberGuard/src/ml/: threat_detector.py
Projects/CyberGuard/src/network/: monitor.py
Projects/NLP-Assistant/: README.md
Projects/NLP-Assistant/app/: package.json
Projects/NLP-Assistant/app/src/: App.tsx
Projects/NLP-Assistant/app/src/contexts/: AssistantContext.tsx
Projects/NLP-Assistant/app/src/screens/: ConnectionScreen.tsx  HomeScreen.tsx  SettingsScreen.tsx
Projects/NLP-Assistant/backend/: requirements.txt
Projects/NLP-Assistant/backend/src/: main.py
Projects/NLP-Assistant/backend/src/asr/: speech_recognizer.py
Projects/NLP-Assistant/backend/src/nlu/: intent_parser.py
Projects/NLP-Assistant/backend/src/server/: websocket_server.py
Projects/NLP-Assistant/backend/src/skills/: skill_manager.py
Projects/NLP-Assistant/backend/src/tts/: speech_synthesizer.py
Projects/NLP-Assistant/backend/src/utils/: audio_utils.py  config_utils.py
Projects/NLP-Assistant/demo/: index.html
Projects/QuantumSandbox/: README.md
Projects/QuantumSandbox/backend/: app.py  requirements.txt
Projects/QuantumSandbox/backend/quantum/: __init__.py  algorithm_library.py  visualization.py
Projects/QuantumSandbox/demo/: index.html
Projects/QuantumSandbox/frontend/: package.json
Projects/QuantumSandbox/frontend/src/: App.tsx
Projects/QuantumSandbox/frontend/src/contexts/: CircuitContext.tsx  SimulationContext.tsx
Projects/QuantumSandbox/frontend/src/pages/: AboutPage.tsx  AlgorithmLibraryPage.tsx  CircuitBuilderPage.tsx  HomePage.tsx  TutorialPage.tsx
Projects/SwarmDrone/: README.md
Projects/SwarmDrone/demo/: index.html
Projects/SwarmDrone/frontend/: package.json
Projects/SwarmDrone/frontend/src/: App.css  App.js
Projects/SwarmDrone/frontend/src/components/: Navbar.css  Navbar.js  Sidebar.css  Sidebar.js
Projects/SwarmDrone/frontend/src/contexts/: WebSocketContext.js
Projects/SwarmDrone/frontend/src/pages/: Dashboard.css  Dashboard.js  MissionPlanner.css  MissionPlanner.js  (+4 more)
Projects/SwarmDrone/ros/swarm_bridge/: CMakeLists.txt  package.xml
Projects/SwarmDrone/ros/swarm_bridge/scripts/: bridge_node.py
Projects/SwarmDrone/ros/swarm_controller/: CMakeLists.txt  package.xml
Projects/SwarmDrone/ros/swarm_controller/scripts/: drone_simulator.py  path_planner.py  swarm_intelligence.py
(+1 files in other folders)
